Mon Oct  5 11:40:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>

        * connectors/dds4ccm
        * connectors/dds4ccm/docs
        * connectors/dds4ccm/examples/Hello/Base
        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl
        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.mpc
        * connectors/dds4ccm/examples/Hello/descriptors/1_to_5.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_Receivers.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_Senders.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_to_1.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/DeploymentPlan.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/ReceiverOnly.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/SenderOnly.cdp
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_Connector_exec.cpp
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_Connector_exec.h
        * connectors/dds4ccm/examples/Quoter
        * connectors/dds4ccm/examples/Quoter/Base
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.mpc
        * connectors/dds4ccm/examples/Quoter/Broker
        * connectors/dds4ccm/examples/Quoter/Broker/Broker.idl3
        * connectors/dds4ccm/examples/Quoter/Broker/Broker.idl3p
        * connectors/dds4ccm/examples/Quoter/Broker/Broker.mpc
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.h
        * connectors/dds4ccm/examples/Quoter/Connector
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl3
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl3p
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.mpc
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp