@@ -1,3 +1,11 @@
+Mon Oct  5 13:24:28 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl:
+        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.h:
+        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp:
+        * connectors/dds4ccm/examples/Quoter/Distributor/controller.cpp:
+          Resolved fuzz errors.
+
 Mon Oct  5 11:40:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm
@@ -53,7 +61,7 @@ Mon Oct  5 11:40:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>
 Mon Oct  5 09:50:44 UTC 2009  Marijke Hengstmengel <mhengstmengel@remedy.nl>
 
         * docs/tutorials/Quoter/Simple/descriptors/NodeMap.dat:
-	  Changed svn properties. Added svn eol-property.
+          Changed svn properties. Added svn eol-property.
 
 Sun Oct  4 17:36:44 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>
 
